tests/snapshots/art_table_us_d3_w60.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-3d-day.json\", UnitSystem::Us, 60))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +72°F (+74°F)
(     ) ↗ 7.5mph NE
 ╰───╯  56% 29.91inHg 6.2mi 0.00in

┌────────────────────┬────────────────────┐
│ Today, Sep 30      │ Thu 01 Oct         │
├────────────────────┼────────────────────┤
│    \│/  Morning    │    \│/  Morning    │
│   ─(●)─ +64°F      │  ╭───╮  +63°F      │
│    /│\  → 5.0mph E │ (     ) → 5.6mph E │
│         0.00in 10% │  ╰───╯  0.01in 40% │
├────────────────────┼────────────────────┤
│    \│/  Noon       │  ╭───╮  Noon       │
│   ─(●)─ +75°F      │ ╭╯   ╰╮ +70°F      │
│    /│\  ↘ 8.7mph   │ (     ) → 9.3mph   │
│    ▁▁▁  0.00in 5%  │ ╰─────╯ 0.05in 55% │
├────────────────────┼────────────────────┤
│    \│/  Evening    │  ╭───╮  Evening    │
│  ╭───╮  +68°F      │ (     ) +64°F      │
│ (     ) ↓ 6.2mph   │  ╰───╯  ↘ 11mph SE │
│  ╰───╯  0.00in 10% │    /    0.18in 75% │
├────────────────────┼────────────────────┤
│   · * · Night      │  ╭───╮  Night      │
│    (●)  +59°F      │ (     ) +61°F      │
│   * · * ↓ 3.7mph   │  ╰───╯  ↘ 12mph    │
│         0.00in 5%  │   / /   0.24in 80% │
└────────────────────┴────────────────────┘

┌────────────────────┐
│ Fri 02 Oct         │
├────────────────────┤
│  ╭───╮  Morning    │
│ ╭╯   ╰╮ +57°F      │
│ (     ) → 4.3mph   │
│ ╰─────╯ 0.00in 20% │
├────────────────────┤
│  ─────  Noon       │
│   ───── +66°F      │
│  ─────  ↗ 6.2mph   │
│         0.00in 15% │
├────────────────────┤
│    \│/  Evening    │
│  ╭───╮  +61°F      │
│ (     ) ↗ 5.0mph   │
│  ╰───╯  0.00in 10% │
├────────────────────┤
│   · * · Night      │
│    (●)  +54°F      │
│   * · * ↗ 3.1mph   │
│         0.00in 5%  │
└────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo …
Data: Open-Meteo.com (CC BY 4.0)
