tests/snapshots/art_table_us_d3_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-3d-day.json\", UnitSystem::Us, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +72°F (+74°F)
(     ) ↗ 7.5mph NE
 ╰───╯  56% 29.91inHg 6.2mi 0.00in

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │    \│/  Morning       │  ╭───╮  Morning       │
│   ─(●)─ +64°F (+63°F) │  ╭───╮  +63°F (+61°F) │ ╭╯   ╰╮ +57°F (+55°F) │
│    /│\  → 5.0mph E    │ (     ) → 5.6mph E    │ (     ) → 4.3mph ENE  │
│         0.00in 10%    │  ╰───╯  0.01in 40%    │ ╰─────╯ 0.00in 20%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │  ─────  Noon          │
│   ─(●)─ +75°F (+77°F) │ ╭╯   ╰╮ +70°F (+70°F) │   ───── +66°F (+66°F) │
│    /│\  ↘ 8.7mph ESE  │ (     ) ↘ 9.3mph ESE  │  ─────  → 6.2mph ENE  │
│    ▁▁▁  0.00in 5%     │ ╰─────╯ 0.05in 55%    │         0.00in 15%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +68°F (+67°F) │ (     ) +64°F (+63°F) │  ╭───╮  +61°F (+59°F) │
│ (     ) ↓ 6.2mph SSE  │  ╰───╯  ↘ 11mph SE    │ (     ) ↗ 5.0mph NE   │
│  ╰───╯  0.00in 10%    │    /    0.18in 75%    │  ╰───╯  0.00in 10%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│   · * · Night         │  ╭───╮  Night         │   · * · Night         │
│    (●)  +59°F (+57°F) │ (     ) +61°F (+59°F) │    (●)  +54°F (+52°F) │
│   * · * ↙ 3.7mph SSW  │  ╰───╯  ↓ 12mph SSE   │   * · * ↗ 3.1mph NE   │
│         0.00in 5%     │   / /   0.24in 80%    │         0.00in 5%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
