tests/snapshots/art_table_us_d7_w80.snap
---
source: tests/render_snapshots.rs
expression: "render(case(\"beijing-7d.json\", UnitSystem::Us, 80))"
---
Weather report: Beijing, Beijing, China (39.90, 116.41)

   \│/  Partly cloudy
 ╭───╮  +68°F (+69°F)
(     ) ↗ 8.1mph NE
 ╰───╯  58% 29.88inHg 6.8mi 0.00in

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Today, Sep 30         │ Thu 01 Oct            │ Fri 02 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ╭───╮  Morning       │  ─────  Morning       │
│   ─(●)─ +64°F (+64°F) │ ╭╯   ╰╮ +63°F (+61°F) │   ───── +54°F (+52°F) │
│    /│\  → 5.0mph E    │ (     ) → 5.6mph E    │  ─────  → 4.3mph ENE  │
│         0.00in 10%    │ ╰─────╯ 0.02in 45%    │         0.00in 20%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │    \│/  Noon          │
│   ─(●)─ +75°F (+76°F) │ (     ) +68°F (+68°F) │  ╭───╮  +64°F (+64°F) │
│    /│\  ↘ 8.1mph ESE  │  ╰───╯  ↘ 8.7mph ESE  │ (     ) → 5.6mph ENE  │
│    ▁▁▁  0.00in 5%     │    /    0.08in 65%    │  ╰───╯  0.00in 15%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +70°F (+69°F) │ (     ) +64°F (+63°F) │   ─(●)─ +59°F (+57°F) │
│ (     ) ↓ 6.2mph SSE  │  ╰───╯  ↘ 11mph SE    │    /│\  ↗ 5.0mph NE   │
│  ╰───╯  0.00in 10%    │   / /   0.14in 75%    │    ▁▁▁  0.00in 10%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│   · * · Night         │  ╭───╮  Night         │   · * · Night         │
│    (●)  +61°F (+59°F) │ (     ) +61°F (+59°F) │    (●)  +52°F (+50°F) │
│   * · * ↙ 3.7mph SSW  │  ╰───╯  ↓ 7.5mph SSE  │   * · * ↗ 3.1mph NE   │
│         0.00in 5%     │    .    0.06in 60%    │         0.00in 5%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ Sat 03 Oct            │ Sun 04 Oct            │ Mon 05 Oct            │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Morning       │  ╭───╮  Morning       │  ─────  Morning       │
│   ─(●)─ +50°F (+48°F) │ ╭╯   ╰╮ +48°F (+46°F) │   ───── +45°F (+42°F) │
│    /│\  → 3.7mph E    │ (     ) ↖ 6.2mph WNW  │  ─────  ↗ 5.6mph NNE  │
│    ▁▁▁  0.00in 15%    │ ╰─────╯ 0.00in 25%    │         0.00in 20%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Noon          │  ╭───╮  Noon          │    \│/  Noon          │
│  ╭───╮  +63°F (+63°F) │ (     ) +59°F (+57°F) │  ╭───╮  +55°F (+54°F) │
│ (     ) ↘ 6.8mph SE   │  ╰───╯  ↖ 9.9mph NW   │ (     ) ↗ 7.5mph NE   │
│  ╰───╯  0.00in 10%    │    .    0.01in 50%    │  ╰───╯  0.00in 15%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  Evening       │  ╭───╮  Evening       │    \│/  Evening       │
│  ╭───╮  +57°F (+55°F) │ (     ) +54°F (+51°F) │   ─(●)─ +50°F (+48°F) │
│ (     ) ↓ 5.6mph SSE  │  ╰───╯  ↑ 11mph NNW   │    /│\  → 5.0mph ENE  │
│  ╰───╯  0.00in 10%    │    /    0.04in 60%    │         0.00in 10%    │
├───────────────────────┼───────────────────────┼───────────────────────┤
│  ╭───╮  Night         │  ╭───╮  Night         │   · * · Night         │
│ ╭╯   ╰╮ +48°F (+46°F) │ (     ) +46°F (+44°F) │    (●)  +43°F (+40°F) │
│ (     ) ↙ 4.3mph SSW  │  ╰───╯  ↑ 8.7mph NNW  │   * · * → 3.7mph E    │
│ ╰─────╯ 0.00in 5%     │   . .   0.02in 55%    │         0.00in 5%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

┌───────────────────────┐
│ Tue 06 Oct            │
├───────────────────────┤
│  ╭───╮  Morning       │
│ ╭╯   ╰╮ +43°F (+39°F) │
│ (     ) ↑ 6.8mph N    │
│ ╰─────╯ 0.00in 30%    │
├───────────────────────┤
│    \│/  Noon          │
│  ╭───╮  +54°F (+52°F) │
│ (     ) ↗ 11mph NNE   │
│    /    0.03in 55%    │
├───────────────────────┤
│    \│/  Evening       │
│  ╭───╮  +48°F (+46°F) │
│ (     ) ↗ 12mph NE    │
│   / /   0.06in 65%    │
├───────────────────────┤
│  ╭───╮  Night         │
│ (     ) +41°F (+38°F) │
│  ╰───╯  ↗ 8.1mph NE   │
│    .    0.02in 50%    │
└───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
Data: Open-Meteo.com (CC BY 4.0)
