tests/snapshots/art_table_zh_metric_d3_w40.snap
---
source: tests/render_snapshots.rs
expression: render(stacked)
---
天气报告： Beijing, Beijing, China (39.…

   \│/  多云
 ╭───╮  +22°C (+24°C)
(     ) ↗ 12km/h
 ╰───╯  56% 1013hPa 10km 0.0mm

今天 9月30日
  早上    │ +18°C │ → 8.0km/h │ 0.0mm
  中午    │ +24°C │ ↘ 14km/h │ 0.0mm
  傍晚    │ +20°C │ ↓ 10km/h │ 0.0mm
  夜间    │ +15°C │ ↙ 6.0km/h │ 0.0mm

10月1日 周四
  早上    │ +17°C │ → 9.0km/h │ 0.2mm
  中午    │ +21°C │ ↘ 15km/h │ 1.2mm
  傍晚    │ +18°C │ ↘ 18km/h │ 4.5mm
  夜间    │ +16°C │ ↓ 20km/h │ 6.0mm

10月2日 周五
  早上    │ +14°C │ → 7.0km/h │ 0.0mm
  中午    │ +19°C │ → 10km/h │ 0.0mm
  傍晚    │ +16°C │ ↗ 8.0km/h │ 0.0mm
  夜间    │ +12°C │ ↗ 5.0km/h │ 0.0mm

Location data based on GeoNames (CC-BY-…
数据： Open-Meteo.com (CC BY 4.0)
