tests/snapshots/art_table_zh_metric_d3_w80.snap
---
source: tests/render_snapshots.rs
expression: render(three_days)
---
天气报告： Beijing, Beijing, China (39.90, 116.41)

   \│/  多云
 ╭───╮  +22°C (+24°C)
(     ) ↗ 12km/h
 ╰───╯  56% 1013hPa 10km 0.0mm

┌───────────────────────┬───────────────────────┬───────────────────────┐
│ 今天 9月30日          │ 10月1日 周四          │ 10月2日 周五          │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  早上          │    \│/  早上          │  ╭───╮  早上          │
│   ─(●)─ +18°C (+17°C) │  ╭───╮  +17°C (+16°C) │ ╭╯   ╰╮ +14°C (+13°C) │
│    /│\  → 8.0km/h     │ (     ) → 9.0km/h     │ (     ) → 7.0km/h     │
│         0.0mm 60%     │  ╰───╯  0.2mm 65%     │ ╰─────╯ 0.0mm 75%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  中午          │  ╭───╮  中午          │  ─────  中午          │
│   ─(●)─ +24°C (+25°C) │ ╭╯   ╰╮ +21°C (+21°C) │   ───── +19°C (+19°C) │
│    /│\  ↘ 14km/h      │ (     ) → 15km/h      │  ─────  ↗ 10km/h      │
│    ▁▁▁  0.0mm 45%     │ ╰─────╯ 1.2mm 70%     │         0.0mm 70%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│    \│/  傍晚          │  ╭───╮  傍晚          │    \│/  傍晚          │
│  ╭───╮  +20°C (+20°C) │ (     ) +18°C (+17°C) │  ╭───╮  +16°C (+15°C) │
│ (     ) ↓ 10km/h      │  ╰───╯  ↘ 18km/h      │ (     ) ↗ 8.0km/h     │
│  ╰───╯  0.0mm 55%     │    /    4.5mm 85%     │  ╰───╯  0.0mm 72%     │
├───────────────────────┼───────────────────────┼───────────────────────┤
│   · * · 夜间          │  ╭───╮  夜间          │   · * · 夜间          │
│    (●)  +15°C (+14°C) │ (     ) +16°C (+15°C) │    (●)  +12°C (+11°C) │
│   * · * ↓ 6.0km/h     │  ╰───╯  ↘ 20km/h      │   * · * ↗ 5.0km/h     │
│         0.0mm 70%     │   / /   6.0mm 90%     │         0.0mm 78%     │
└───────────────────────┴───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
数据： Open-Meteo.com (CC BY 4.0)
