tests/snapshots/art_table_zh_night_d2_w80.snap
---
source: tests/render_snapshots.rs
expression: render(night)
---
天气报告： Beijing, Beijing, China (39.90, 116.41)

  · * · 晴
   (●)  +14°C (+13°C)
  * · * ↖ 6.0km/h
        72% 1018hPa 10km 0.0mm

┌───────────────────────┬───────────────────────┐
│ 今天 9月30日          │ 10月1日 周四          │
├───────────────────────┼───────────────────────┤
│    \│/  早上          │    \│/  早上          │
│   ─(●)─ +16°C (+15°C) │   ─(●)─ +15°C (+14°C) │
│    /│\  ← 6.0km/h     │    /│\  ↖ 6.0km/h     │
│    ▁▁▁  0.0mm 5%      │    ▁▁▁  0.0mm 5%      │
├───────────────────────┼───────────────────────┤
│    \│/  中午          │    \│/  中午          │
│  ╭───╮  +22°C (+22°C) │  ╭───╮  +21°C (+21°C) │
│ (     ) ↖ 10km/h      │ (     ) ↖ 9.0km/h     │
│  ╰───╯  0.0mm 5%      │  ╰───╯  0.0mm 5%      │
├───────────────────────┼───────────────────────┤
│  ╭───╮  傍晚          │    \│/  傍晚          │
│ ╭╯   ╰╮ +18°C (+17°C) │  ╭───╮  +17°C (+16°C) │
│ (     ) ↖ 8.0km/h     │ (     ) ↖ 7.0km/h     │
│ ╰─────╯ 0.0mm 10%     │  ╰───╯  0.0mm 10%     │
├───────────────────────┼───────────────────────┤
│   · * · 夜间          │   * · * 夜间          │
│    (●)  +14°C (+13°C) │  ╭───╮  +13°C (+12°C) │
│   * · * ↖ 5.0km/h     │ (     ) ↖ 5.0km/h     │
│         0.0mm 5%      │  ╰───╯  0.0mm 5%      │
└───────────────────────┴───────────────────────┘

Location data based on GeoNames (CC-BY-4.0) via Open-Meteo — https://open-meteo…
数据： Open-Meteo.com (CC BY 4.0)
